nohup.out
 * Serving Flask app 'app'
 * Debug mode: on
[31m[1mWARNING: This is a development server. Do not use it in a production deployment. Use a production WSGI server instead.[0m
 * Running on all addresses (0.0.0.0)
 * Running on http://127.0.0.1:5000
 * Running on http://172.29.62.157:5000
[33mPress CTRL+C to quit[0m
 * Restarting with stat
 * Debugger is active!
 * Debugger PIN: 334-894-118
127.0.0.1 - - [02/Mar/2025 09:40:22] "GET /predict HTTP/1.1" 200 -
127.0.0.1 - - [02/Mar/2025 09:42:33] "GET /predict HTTP/1.1" 200 -
127.0.0.1 - - [02/Mar/2025 09:43:06] "GET /predict HTTP/1.1" 200 -
127.0.0.1 - - [02/Mar/2025 09:43:07] "GET /predict HTTP/1.1" 200 -
127.0.0.1 - - [02/Mar/2025 09:47:30] "[33mGET /get-threats HTTP/1.1[0m" 404 -
127.0.0.1 - - [02/Mar/2025 09:47:30] "[33mGET /get-threats HTTP/1.1[0m" 404 -
127.0.0.1 - - [02/Mar/2025 09:47:34] "[33mGET /get-threats HTTP/1.1[0m" 404 -
127.0.0.1 - - [02/Mar/2025 09:47:40] "[33mGET /get-threats HTTP/1.1[0m" 404 -
127.0.0.1 - - [02/Mar/2025 09:47:45] "[33mGET /get-threats HTTP/1.1[0m" 404 -
127.0.0.1 - - [02/Mar/2025 09:48:21] "[33mGET /get-threats HTTP/1.1[0m" 404 -
127.0.0.1 - - [02/Mar/2025 09:47:55] "[33mGET /get-threats HTTP/1.1[0m" 404 -
127.0.0.1 - - [02/Mar/2025 09:48:31] "[33mGET /get-threats HTTP/1.1[0m" 404 -
127.0.0.1 - - [02/Mar/2025 09:48:05] "[33mGET /get-threats HTTP/1.1[0m" 404 -
127.0.0.1 - - [02/Mar/2025 09:48:41] "[33mGET /get-threats HTTP/1.1[0m" 404 -
127.0.0.1 - - [02/Mar/2025 09:48:15] "[33mGET /get-threats HTTP/1.1[0m" 404 -
127.0.0.1 - - [02/Mar/2025 09:48:51] "[33mGET /get-threats HTTP/1.1[0m" 404 -
127.0.0.1 - - [02/Mar/2025 09:48:25] "[33mGET /get-threats HTTP/1.1[0m" 404 -
127.0.0.1 - - [02/Mar/2025 09:49:01] "[33mGET /get-threats HTTP/1.1[0m" 404 -
127.0.0.1 - - [02/Mar/2025 09:48:35] "[33mGET /get-threats HTTP/1.1[0m" 404 -
127.0.0.1 - - [02/Mar/2025 09:49:11] "[33mGET /get-threats HTTP/1.1[0m" 404 -
127.0.0.1 - - [02/Mar/2025 09:48:45] "[33mGET /get-threats HTTP/1.1[0m" 404 -
127.0.0.1 - - [02/Mar/2025 09:49:04] "[33mGET /get-threats HTTP/1.1[0m" 404 -
127.0.0.1 - - [02/Mar/2025 09:50:04] "[33mGET /get-threats HTTP/1.1[0m" 404 -
127.0.0.1 - - [02/Mar/2025 09:51:04] "[33mGET /get-threats HTTP/1.1[0m" 404 -
 * Detected change in '/root/cybersecurity-system/backend/app.py', reloading
 * Restarting with stat
  File "/root/cybersecurity-system/backend/app.py", line 2
    import from flask import Flask, request, jsonify
           ^^^^
SyntaxError: invalid syntax
Traceback (most recent call last):
  File "/root/cybersecurity-system/backend/app.py", line 3, in <module>
    from flask import Flask, request, jsonify
ModuleNotFoundError: No module named 'flask'
Traceback (most recent call last):
  File "/root/cybersecurity-system/backend/app.py", line 3, in <module>
    from flask import Flask, request, jsonify
ModuleNotFoundError: No module named 'flask'
